<resources>
    <string name="app_name">Nyaa Reader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="series_image">Series Image</string>
    <string name="series_name">Series Name</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="want_to_read">Want to read</string>
    <string name="finished">Finished</string>
    <string name="favorite">Favorite</string>
    <string name="book_name">Book Name</string>
    <string name="synopsis">Synopsis</string>
</resources>